DTSSTCI-1704: add testing for document saves to db